syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";
import "proto/log.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// https://protobuf.dev/reference/go/go-generated/#package
option go_package = "<<apiModule .envInformation.goModuleNamePrefix .serviceInput.directoryName>>/v1";

// More info on how to use REST api
// https://cloud.google.com/endpoints/docs/grpc/transcoding#map_a_get_method

// The greeting service definition.
service <<.serviceInput.serviceName>> {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/hello"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Send a greeting"
      description: "This operation sends a greeting to the user."
    };
  }
}

message HelloRequest {
  string name = 1 [(buf.validate.field).string.min_len = 2]; 
  int32 age = 2 [(buf.validate.field).int32 = {
    gte: 1,
    lt: 150
  }, (servicehub.fieldoptions.loggable) = false]; 
  string email = 3 [(buf.validate.field).string = {
    min_len: 1,
    pattern: "^[\\w.-]+@[\\w.-]+\\.[\\w]{2,}$"
  }, (servicehub.fieldoptions.loggable) = false]; 
  optional Address address = 4;
}

message HelloReply {
  string message = 1; 
}

message Address {
  string city = 1 [(buf.validate.field).string.min_len = 1]; // The city name
  string state = 2 [(buf.validate.field).string.min_len = 1, (servicehub.fieldoptions.loggable) = false]; // The state name
  int32 zipcode = 3 [(buf.validate.field).int32 = {
    gte: 10000,
    lt: 99999
  }]; // The zip code
  string street = 4 [(buf.validate.field).string.min_len = 1, (servicehub.fieldoptions.loggable) = false]; // The street name
  
}
